// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LongTextTooltip component should render 1`] = `
<LongTextTooltip
  content=""
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span />
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content tooltip in a different spot with different width 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="10vw"
  tooltipPosition="left"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content with maxLength 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={50}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render content with maxLength shorter than content 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={1}
  tooltipMaxWidth="50vw"
  tooltipPosition="top"
>
  <Tooltip
    content={
      <div>
        Lorem Impsum
      </div>
    }
    maxWidth="50vw"
    position="top"
  >
    <Popper
      appendTo={[Function]}
      distance={15}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onBlur={[Function]}
      onDocumentClick={false}
      onDocumentKeyDown={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTriggerEnter={[Function]}
      placement="top"
      popper={
        <div
          className="pf-c-tooltip"
          id="pf-tooltip-1"
          role="tooltip"
          style={
            Object {
              "maxWidth": "50vw",
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <TooltipArrow />
          <TooltipContent
            isLeftAligned={false}
          >
            <div>
              Lorem Impsum
            </div>
          </TooltipContent>
        </div>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "left": "pf-m-left",
          "right": "pf-m-right",
          "top": "pf-m-top",
        }
      }
      trigger={
        <div>
          …
        </div>
      }
      zIndex={9999}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <div>
          …
        </div>
      </FindRefWrapper>
    </Popper>
  </Tooltip>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 1`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="bottom"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 2`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="left"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;

exports[`LongTextTooltip component should render tooltip in a different spot 3`] = `
<LongTextTooltip
  content="Lorem Impsum"
  maxLength={Infinity}
  tooltipMaxWidth="50vw"
  tooltipPosition="right"
>
  <span>
    Lorem Impsum
  </span>
</LongTextTooltip>
`;
